samples/local/rustfs-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-rustfs
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/server-snippet: |
      client_max_body_size 0;
    nginx.ingress.kubernetes.io/configuration-snippet: |
      chunked_transfer_encoding off;
spec:
  ingressClassName: currents-nginx
  rules:
    - host: rustfs.localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: rustfs
                port:
                  number: 9000
